[change] Modal 구조 변경, Docs 변경

--- a/stories/Message/Modal/BasicModal.stories.mdx
+++ b/stories/Message/Modal/BasicModal.stories.mdx
@@ -74,7 +74,7 @@ import Button from "@/src/Components/Button/Button";
             defaultValue: "Basic Modal",
             control: { type: "text" },
         },
-        contents: {
+        content: {
             description: "모달 내용",
             defaultValue: ['본문을 작성하세요.', '문단을 분리할 때에는 margin:8px로 구분합니다.'],
             control: { type: "array" },
@@ -101,8 +101,8 @@ export const Basic = (args, { argTypes }) => ({
                 <template v-slot:title>
                     {{ title }}
                 </template>
-                <template v-slot:contents>
-                    <div v-for="content in contents" v-html="content" />
+                <template v-slot:content>
+                    <div v-for="content in content" v-html="content" />
                 </template>
             </BasicModal>
         </div>`
@@ -136,7 +136,7 @@ export const Basic = (args, { argTypes }) => ({
                         <template v-slot:title>
                           이용약관 및 유의사항
                         </template>
-                        <template v-slot:contents>
+                        <template v-slot:content>
                             - 이용권 특성상 구매 후 중도 해지 및 이에 따른 환불이 불가능합니다.<br />
                             - 일부 콘텐츠는 작성자 또는 답변자 요청으로 열람이 제한될 수 있습니다.<br />
                             - 취소하면 결제에 사용된 할인 쿠폰은 소멸되며 재사용할 수 없습니다.<br />
@@ -148,6 +148,95 @@ export const Basic = (args, { argTypes }) => ({
             components: {
                 BasicModal, Button
             }
+        }}
+    </Story>
+</Canvas>
+
+### Scroll
+<Canvas>
+    <Story name="Scroll" height="100px">
+        {{
+            data: () => ({
+                show1: false,
+                show2: false,
+            }),
+            template: `
+                <div>
+                    <Button @click="show1 = true">Open</Button>
+                    <BasicModal :show.sync="show1" align="left">
+                        <template v-slot:title>
+                            모달 제목
+                        </template>
+                        <template v-slot:content>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non sollicitudin lacus. Morbi lacinia
+                            tortor id purus varius, sit amet sodales erat consequat. Integer ultrices mauris vehicula eros lacinia,
+                            at vulputate nibh euismod. Fusce at convallis nisl. Curabitur dui quam, rutrum quis semper vitae,
+                            dapibus nec lorem. Sed maximus imperdiet urna. Suspendisse porta commodo nisl, at viverra sapien.
+                            Praesent in felis enim. Sed mollis enim vel velit dapibus, eget consequat dolor convallis. Vivamus sit
+                            amet ornare ex. Morbi porttitor blandit eros sit amet tincidunt. Vivamus imperdiet molestie lectus ac
+                            tristique. Phasellus commodo commodo ligula, sollicitudin auctor erat rhoncus ac. Quisque lectus neque,
+                            iaculis nec mauris sed, congue rutrum sem. Fusce cursus, tortor ut placerat auctor, risus arcu porttitor
+                            tellus, ac pharetra lacus lectus eu dolor. Sed metus nibh, tincidunt pharetra pulvinar a, venenatis et
+                            eros. Cras et libero mauris. Quisque bibendum odio ut ornare interdum. Nunc eu nulla sollicitudin,
+                            facilisis dolor vel, placerat nibh. Donec eu ex iaculis, tincidunt turpis et, rhoncus neque. Mauris
+                            feugiat urna urna. Donec ac dapibus leo, sit amet porttitor nisi. Mauris felis leo, scelerisque
+                            scelerisque lobortis id, egestas tincidunt dui. Vivamus facilisis felis lectus, id tincidunt nisl
+                            interdum et. Praesent accumsan congue mauris, non pellentesque enim feugiat vel. Praesent in ullamcorper
+                            erat. Etiam mollis sed tellus a mattis. Ut placerat euismod egestas. Mauris blandit nunc eu justo
+                            semper, sit amet interdum eros mollis. Quisque vitae massa purus. Phasellus at orci arcu. Aliquam erat
+                            volutpat. Mauris bibendum orci nec ex semper, ac aliquam sapien placerat. Mauris cursus egestas justo id
+                            elementum. Suspendisse quis cursus massa. Cras fermentum, risus non efficitur condimentum, orci arcu
+                            sollicitudin diam, pharetra malesuada libero odio quis risus. Pellentesque in dui sodales, dapibus risus
+                            ullamcorper, bibendum diam. Praesent sagittis nibh velit, quis tincidunt lorem viverra nec. Phasellus
+                            eget placerat ante. Nulla ac nulla sed erat venenatis commodo. Aliquam id iaculis odio. Maecenas a
+                            maximus orci. In hac habitasse platea dictumst. Quisque quis diam tellus. In ac euismod libero. Aliquam
+                            semper, massa non dictum porttitor, nisi nulla aliquam risus, ornare iaculis tellus ligula sed nulla. Ut
+                            aliquet ligula ac finibus fringilla. Pellentesque pulvinar eros vulputate, bibendum tortor a, imperdiet
+                            metus. Ut rhoncus arcu est, nec elementum neque ultrices sit amet. Pellentesque dignissim ligula felis,
+                            nec scelerisque elit condimentum vitae. In porta magna eget augue egestas pulvinar. Suspendisse
+                            malesuada tellus sed massa pulvinar, sed maximus lorem elementum. Vivamus facilisis libero sit amet
+                            lacinia malesuada. Nam varius tortor quis lacus ultrices fermentum.
+                        </template>
+                    </BasicModal>
+                    <Button @click="show2 = true">Open</Button>
+                    <BasicModal :show.sync="show2" align="left" :show-action-button="true">
+                        <template v-slot:title>
+                            모달 제목
+                        </template>
+                        <template v-slot:content>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent non sollicitudin lacus. Morbi lacinia
+                            tortor id purus varius, sit amet sodales erat consequat. Integer ultrices mauris vehicula eros lacinia,
+                            at vulputate nibh euismod. Fusce at convallis nisl. Curabitur dui quam, rutrum quis semper vitae,
+                            dapibus nec lorem. Sed maximus imperdiet urna. Suspendisse porta commodo nisl, at viverra sapien.
+                            Praesent in felis enim. Sed mollis enim vel velit dapibus, eget consequat dolor convallis. Vivamus sit
+                            amet ornare ex. Morbi porttitor blandit eros sit amet tincidunt. Vivamus imperdiet molestie lectus ac
+                            tristique. Phasellus commodo commodo ligula, sollicitudin auctor erat rhoncus ac. Quisque lectus neque,
+                            iaculis nec mauris sed, congue rutrum sem. Fusce cursus, tortor ut placerat auctor, risus arcu porttitor
+                            tellus, ac pharetra lacus lectus eu dolor. Sed metus nibh, tincidunt pharetra pulvinar a, venenatis et
+                            eros. Cras et libero mauris. Quisque bibendum odio ut ornare interdum. Nunc eu nulla sollicitudin,
+                            facilisis dolor vel, placerat nibh. Donec eu ex iaculis, tincidunt turpis et, rhoncus neque. Mauris
+                            feugiat urna urna. Donec ac dapibus leo, sit amet porttitor nisi. Mauris felis leo, scelerisque
+                            scelerisque lobortis id, egestas tincidunt dui. Vivamus facilisis felis lectus, id tincidunt nisl
+                            interdum et. Praesent accumsan congue mauris, non pellentesque enim feugiat vel. Praesent in ullamcorper
+                            erat. Etiam mollis sed tellus a mattis. Ut placerat euismod egestas. Mauris blandit nunc eu justo
+                            semper, sit amet interdum eros mollis. Quisque vitae massa purus. Phasellus at orci arcu. Aliquam erat
+                            volutpat. Mauris bibendum orci nec ex semper, ac aliquam sapien placerat. Mauris cursus egestas justo id
+                            elementum. Suspendisse quis cursus massa. Cras fermentum, risus non efficitur condimentum, orci arcu
+                            sollicitudin diam, pharetra malesuada libero odio quis risus. Pellentesque in dui sodales, dapibus risus
+                            ullamcorper, bibendum diam. Praesent sagittis nibh velit, quis tincidunt lorem viverra nec. Phasellus
+                            eget placerat ante. Nulla ac nulla sed erat venenatis commodo. Aliquam id iaculis odio. Maecenas a
+                            maximus orci. In hac habitasse platea dictumst. Quisque quis diam tellus. In ac euismod libero. Aliquam
+                            semper, massa non dictum porttitor, nisi nulla aliquam risus, ornare iaculis tellus ligula sed nulla. Ut
+                            aliquet ligula ac finibus fringilla. Pellentesque pulvinar eros vulputate, bibendum tortor a, imperdiet
+                            metus. Ut rhoncus arcu est, nec elementum neque ultrices sit amet. Pellentesque dignissim ligula felis,
+                            nec scelerisque elit condimentum vitae. In porta magna eget augue egestas pulvinar. Suspendisse
+                            malesuada tellus sed massa pulvinar, sed maximus lorem elementum. Vivamus facilisis libero sit amet
+                            lacinia malesuada. Nam varius tortor quis lacus ultrices fermentum.
+                        </template>
+                    </BasicModal>
+                </div>
+            `,
+            components: { Button, BasicModal }
         }}
     </Story>
 </Canvas>
