--- a/stories/Message/Modal/WithFormModal.stories.mdx
+++ b/stories/Message/Modal/WithFormModal.stories.mdx
@@ -81,7 +81,16 @@ import Typography from "@/src/Elements/Core/Typography/Typography";
         title: {
             description: "모달 제목",
             defaultValue: "Basic Modal",
-            control: { type: "text" },
+            control: {
+                type: "text"
+            },
+        },
+        scroll: {
+            description: "스크롤 여부",
+            defaultValue: false,
+            control: {
+                type: "boolean",
+            },
         },
     }}
 />
@@ -101,6 +110,7 @@ export const Basic = (args, { argTypes }) => ({
                 :success-message="successMessage"
                 :show-action-button="showActionButton"
                 :max-width="maxWidth"
+                :scroll="scroll"
             >
                 <template v-slot:title>
                     {{ title }}
@@ -245,7 +255,7 @@ export const Basic = (args, { argTypes }) => ({
             template: `
                 <div>
                     <Button @click="show1 = true">Open</Button>
-                    <WithFormModal :show.sync="show1" align="left">
+                    <WithFormModal :show.sync="show1" align="left" scroll>
                         <template v-slot:title>
                             모달 제목
                         </template>
@@ -281,7 +291,7 @@ export const Basic = (args, { argTypes }) => ({
                         </template>
                     </WithFormModal>
                     <Button @click="show2 = true">Open</Button>
-                    <WithFormModal :show.sync="show2" align="left" :show-action-button="true">
+                    <WithFormModal :show.sync="show2" align="left" :show-action-button="true" scroll>
                         <template v-slot:title>
                             모달 제목
                         </template>
