[fix] storybook src

--- a/stories/DataEntry/Checkbox.stories.mdx
+++ b/stories/DataEntry/Checkbox.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
-import Checkbox from "@/src/DataEntry/Checkbox";
+import Checkbox from "@/src/Components/DataEntry/Checkbox";
 
 <Meta
     title="DESIGN SYSTEM/DataEntry/Checkbox"
