--- a/stories/DataEntry/Dropdown.stories.mdx
+++ b/stories/DataEntry/Dropdown.stories.mdx
@@ -1,9 +1,9 @@
 import { ArgsTable, Meta, Story } from "@storybook/addon-docs/blocks";
-import Dropdown from "@/src/DataEntry/Dropdown";
+import Dropdown from "@/src/Components/DataEntry/Dropdown";
 import List from "@/src/Components/DataDisplay/List";
 import ListItem from "@/src/Components/DataDisplay/ListItem";
 import Divider from "@/src/Elements/Utility/Divider";
-import Input from "@/src/DataEntry/Input";
+import Input from "@/src/Components/DataEntry/Input";
 
 <Meta
     title="DESIGN SYSTEM/DataEntry/Dropdown"
