--- a/stories/Message/Modal/WithFormModal.stories.mdx
+++ b/stories/Message/Modal/WithFormModal.stories.mdx
@@ -1,6 +1,6 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import WithFormModal from "@/src/Components/Message/Modal/WithFormModal";
-import Input from "@/src/DataEntry/Input";
+import Input from "@/src/Components/DataEntry/Input";
 import Button from "@/src/Components/Button/Button";
 import Typography from "@/src/Elements/Core/Typography/Typography";
 
