[fix] Button disabled 오류 수정

--- a/stories/Button/Button.stories.mdx
+++ b/stories/Button/Button.stories.mdx
@@ -190,6 +190,18 @@ export const Basic = (args, { argTypes }) => ({
                     <Button color="error" type="fill" size="medium" disabled>Fill Gray</Button>
                     <Button color="gray" type="fill" size="medium" disabled>Fill Gray</Button>
                   </div>
+                  <div style="display: flex">
+                    <Button color="primary" type="outlined" size="medium" disabled>Fill Primary</Button>
+                    <Button color="success" type="outlined" size="medium" disabled>Fill Success</Button>
+                    <Button color="error" type="outlined" size="medium" disabled>Fill Gray</Button>
+                    <Button color="gray" type="outlined" size="medium" disabled>Fill Gray</Button>
+                  </div>
+                  <div style="display: flex">
+                    <Button color="primary" type="text" size="medium" disabled>Fill Primary</Button>
+                    <Button color="success" type="text" size="medium" disabled>Fill Success</Button>
+                    <Button color="error" type="text" size="medium" disabled>Fill Gray</Button>
+                    <Button color="gray" type="text" size="medium" disabled>Fill Gray</Button>
+                  </div>
                 </div>
         `,
             components: { Button },
