--- a/stories/Icon/Icon.stories.mdx
+++ b/stories/Icon/Icon.stories.mdx
@@ -1,5 +1,5 @@
 import { ArgsTable, Meta, Story, Props } from "@storybook/addon-docs/blocks";
-import Icon from "@/src/Elements/Core/Icon/Icon";
+import Icon, { IconNames } from "@/src/Elements/Core/Icon/Icon";
 
 <Meta
   title="Icon"
@@ -10,75 +10,7 @@ import Icon from "@/src/Elements/Core/Icon/Icon";
       defaultValue: "IconSearchLargeLine",
       control: {
         type: "select",
-        options: [
-          "IconPlusSmallLine",
-          "IconArrowSmallLine",
-          "IconOverflowSmallFill",
-          "IconTextArrowSmallFill",
-          "IconOfficialSmallFill",
-          "IconExclamationSmallFill",
-          "IconProfileSmallFill",
-          "IconCheckSmallFill",
-          "IconCheckMediumFill",
-          "IconQuestionMediumLine",
-          "IconLikeMediumFill",
-          "IconCommentMediumLine",
-          "IconCheckMediumLine",
-          "IconPlusMediumLine",
-          "IconExclamationMediumLine",
-          "IconArrowMediumLine",
-          "IconTextArrowMediumLine",
-          "IconFileMediumLine",
-          "IconTrashMediumLine",
-          "IconDownloadMediumLine",
-          "IconOverflowMediumFill",
-          "IconHourglassMediumLine",
-          "IconCloseMediumFill",
-          "IconInfoMediumFill",
-          "IconInfoMediumLine",
-          "IconCloseMediumLine",
-          "IconCheckCircleMediumFill",
-          "IconFilterMediumLine",
-          "IconResumeMediumLine",
-          "IconJobWikiMediumLine",
-          "IconAnalyticsMediumLine",
-          "IconProfileLargeFill",
-          "IconSelectedLargeLine",
-          "IconReplyLargeLine",
-          "IconPlusLargeLine",
-          "IconProfileLargeLine",
-          "IconAlarmLargeLine",
-          "IconSearchLargeLine",
-          "IconBackwardLargeLine",
-          "IconArrowLargeLine",
-          "IconTextArrowLargeLine",
-          "IconCloseLargeLine",
-          "IconKeylineLargeLine",
-          "IconExclamationLargeLine",
-          "IconFilterLargeLine",
-          "IconCheckLargeFill",
-          "IconAnalyticsLargeLine",
-          "IconInterviewLargeLine",
-          "IconEssayLargeLine",
-          "IconArrowXLargeLine",
-          "IconCloseXLargeLine",
-          "IconQuestionXLargeLine",
-          "IconAdoptXLargeLine",
-          "IconCreditPlusXLargeLine",
-          "IconCreditMinusXLargeLine",
-          "IconCelebrateXLargeLine",
-          "IconAnswerXLargeLine",
-          "IconMegaphoneXLargeLine",
-          "IconSpinnerSmall",
-          "IconSpinnerMedium",
-          "IconSpinnerLarge",
-          "IconMentoringLargeLine",
-          "IconVodLargeLine",
-          "IconAnswerLargeLine",
-          "IconEduLargeLine",
-          "IconDownloadLargeLine",
-          "IconCheckLargeLine"
-        ],
+        options: IconNames,
       },
       table: {
         type: {
